--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <script src="js/app.js" defer></script>
 </head>
 <body>
-  <title>проверка</title>
+  <div class="container">
+    <section class="gallery">
+      <div class="frame">123</div>
+      <div class="frame">123</div>
+      <div class="frame">123</div>
+    </section>
+  </div>
 </body>
 </html>
