--- a/index.html
+++ b/index.html
@@ -11,9 +11,17 @@
 <body>
   <div class="container">
     <section class="gallery">
-      <div class="frame">123</div>
-      <div class="frame">123</div>
-      <div class="frame">123</div>
+      <div class="frame">
+        <div class="frame__content">
+          <h2 class="frame__title">Путешествия</h2>
+        </div>
+      </div>
+      <div class="frame">
+        <div class="frame__content">
+          <div class="frame__media frame__media--left" style="background-image: url(images/1.jpg);"></div>
+        </div>
+      </div>
+      <div class="frame"></div>
     </section>
   </div>
 </body>
